[package]
name = "flux-fracture"
version = "0.1.0"
edition = "2021"
description = "Disjoint linear algebra for constraint systems — fracture into independent blocks, coalesce provably correct"
license = "MIT"
authors = ["Forgemaster ⚒️ <forgemaster@superinstance.org>"]
repository = "https://github.com/SuperInstance/flux-fracture"
keywords = ["constraint", "linear-algebra", "graph", "connected-components", "coalesce"]
categories = ["mathematics", "algorithms", "science"]

[features]
default = ["std"]
std = []

[workspace]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fracture_bench"
harness = false
